<resources>
    <string name="app_name">Basic Calculator</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="clear">Clear</string>
    <string name="divide">Divide</string>
    <string name="result">Result:</string>
    <string name="app_logo">App logo</string>
</resources>