<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_logo"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_plain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewCalcTitle"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/textViewCalcTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_marginTop="128sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextFirstNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextFirstNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/field_background"
        android:hint="@string/first_number"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editTextSecondNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCalcTitle" />

    <EditText
        android:id="@+id/editTextSecondNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="no"
        android:background="@drawable/field_background"
        android:hint="@string/second_number"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstNumber" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSecondNumber">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/app_green"
            android:padding="12dp"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/app_green"
            android:padding="12dp"
            android:text="@string/subtract"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:padding="12dp"
        android:text="@string/clear"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLayout" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/field_background"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/result"
        android:textColor="#333333"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

</androidx.constraintlayout.widget.ConstraintLayout>
